fix gap between board tab and board body

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,9 @@ button {
 .align-items-center {
   align-items: center;
 }
-
+.align-self-end {
+  align-self: flex-end;
+}
 .py-0 {
   padding: 0px;
 }
@@ -58,7 +60,6 @@ ul li {
 nav {
   margin: 0px;
   padding-top: 3px;
-
 }
 
 .boards button {
@@ -96,7 +97,6 @@ input {
   border: none;
 }
 
-
 .search {
   background-color: #ffffff;
   padding: 3px 30px 3px 13px;
@@ -104,7 +104,6 @@ input {
   margin-right: 20px;
   display: flex;
   justify-content: space-between;
-
 }
 
 #search {
@@ -161,8 +160,7 @@ nav .nav-buttons .fa-trash {
   padding: 5px;
   position: fixed;
   resize: both;
-  overflow :hidden;
-
+  overflow: hidden;
 }
 
 .note-date {
@@ -189,14 +187,13 @@ nav .nav-buttons .fa-trash {
   resize: none;
 }
 
-
 .note:hover {
   border: 2px solid black;
   box-shadow: 2px 2px 4px gray;
   border-radius: 3px;
   transition: all 0.1s ease-in-out;
 }
-.color-controls{
+.color-controls {
   display: flex;
   gap: 3px;
 }
@@ -209,7 +206,6 @@ nav .nav-buttons .fa-trash {
   align-items: end;
 }
 
-
 .color-dot {
   width: 12px;
   height: 12px;
@@ -219,15 +215,15 @@ nav .nav-buttons .fa-trash {
 }
 
 .color-dot.red {
-  background-color: #FEAEAE;
+  background-color: #feaeae;
 }
 
 .color-dot.green {
-  background-color: #CDFCB6;
+  background-color: #cdfcb6;
 }
 
 .color-dot.blue {
-  background-color: #B6D7FC;
+  background-color: #b6d7fc;
 }
 
 .color-dot.gray {
@@ -281,7 +277,7 @@ input::placeholder {
     width: 100%;
     margin-bottom: 10px;
     border-radius: 0.5rem;
-    margin-right :0;
+    margin-right: 0;
   }
 
   .nav-buttons {
@@ -300,16 +296,13 @@ input::placeholder {
     margin: 0px;
     bottom: 0;
     left: 0;
-    width: 40%; 
+    width: 40%;
   }
-  
 }
-
 
 @media (min-width: 481px) and (max-width: 629px) {
   nav {
-  
-    position : relative;
+    position: relative;
   }
 
   .search {
@@ -317,17 +310,14 @@ input::placeholder {
     padding: 3px 10px;
   }
 
-
-  
   .boards {
     flex: 1;
     display: flex;
-    left : 0;
+    left: 0;
     bottom: 0;
-    position :absolute;
-    width :40%;
-    height : 30%;
-   
+    position: absolute;
+    width: 40%;
+    height: 30%;
   }
 
   .nav-buttons {
@@ -340,20 +330,11 @@ input::placeholder {
   button {
     font-size: 10px;
     padding: 4px 8px;
-    
   }
 
   .add-note {
     width: 20px;
-    height: 20px; 
+    height: 20px;
     line-height: 20px;
-   
- 
   }
-
-  
-
 }
-
-
-  
